--- a/css-avancado/brafe-1-puro/assets/css/styles.css
+++ b/css-avancado/brafe-1-puro/assets/css/styles.css
@@ -48,6 +48,34 @@ body {
   padding: 10px;
   text-decoration: none;
   color: #fff;
+  font-size: 1.125em; 
+}
+
+/* Intro */
+
+.intro {
+  background: url('../img/bg-intro.jpg') no-repeat center center;
+  background-size: cover;
+  padding: 150px 0;
+  color: #fff;
+  text-align: center;
+}
+
+.intro h1 {
+  font-size: 3em;
+  text-transform: uppercase;
+}
+
+.intro h1::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 4px;
+  background-color: #fff;
+  margin: 10px auto;
+}
+
+.intro p {
+  font-style: italic;
   font-size: 1.125em;
-  
 }
