Seção locals finalizada.

--- a/css-avancado/brafe-1-puro/assets/css/styles.css
+++ b/css-avancado/brafe-1-puro/assets/css/styles.css
@@ -219,3 +219,56 @@ h2.products-mineiro::before {
   transition: 1s;
 }
 
+/* Locals */
+
+.locals {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+
+.locals-item {
+  clear: both;
+  margin: 60px auto;
+}
+
+.locals-item::after,
+.locals-item::before {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.locals-item img {
+  width: 460px;
+  float: left;
+  display: block;
+  margin: 0 10px;
+}
+
+.locals-item > div {
+  width: 460px;
+  float: left;
+  margin: 0 10px;
+}
+
+.locals-item h2 {
+  font-size: 2.25em;
+  margin-bottom: 20px;
+}
+
+.locals-item p {
+  font-size: 1.125em;
+  line-height: 1.4em;
+  max-width: 320px;
+  margin-bottom: 40px;
+}
+
+.locals-item a {
+  font-size: 1.125em;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 3px solid;
+  color: #252525;
+  padding: 10px 20px;
+}
