--- a/css-avancado/brafe-1-puro/assets/css/styles.css
+++ b/css-avancado/brafe-1-puro/assets/css/styles.css
@@ -344,3 +344,36 @@ h2.products-mineiro::before {
   padding: 13px 0;
   cursor: pointer;
 }
+
+/* Footer */
+
+footer {
+  background: #d6d3c8;
+  padding: 40px 0;
+}
+
+.footer-container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.footer-container::after,
+.footer-container::before {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.footer p {
+  float: left;
+  margin: 0 10px;
+  font-size: 1.125em;
+  line-height: 1.4em;
+}
+
+.footer img {
+  float: right;
+  margin: 0 10px;
+  display: block;
+}
+
