--- a/css-avancado/brafe-1-grid/css/style.css
+++ b/css-avancado/brafe-1-grid/css/style.css
@@ -74,11 +74,13 @@ img {
   background: url("../img/bg-intro.jpg") no-repeat center center;
   background-size: cover;
   color: #fff;
+  padding: 60px 0;
 }
 
 .intro h1 {
   text-transform: uppercase;
   font-size: 3em;
+  text-align: center;
 }
 
 .intro h1::after {
@@ -87,17 +89,25 @@ img {
   width: 20px;
   height: 4px;
   background: #fff;
+  margin: 10px auto;
 }
 
 .intro p {
   font-style: italic;
   font-size: 1.125em;
+  text-align: center;
 }
 
 /* Sobre */
 
+.sobre {
+  padding: 60px 0;
+}
+
 .sobre h2 {
   font-size: 2.25em;
+  text-align: center;
+  margin-bottom: 60px;
 }
 
 .sobre-item h3 {
@@ -109,12 +119,18 @@ img {
   font-weight: normal;
   text-align: center;
   position: relative;
+  width: 220px;
+  padding: 5px 0 10px 0;
+  top: -25px;
 }
 
 .sobre > p {
   font-size: 1.125em;
   line-height: 1.4em;
   font-style: italic;
+  max-width: 460px;
+  margin: 0 auto;
+  text-align: center;
 }
 
 /* Produtos */
@@ -123,10 +139,16 @@ img {
   background: #e7e4d8;
   border-top: 3px solid #d6d3c8;
   border-bottom: 3px solid #d6d3c8;
+  padding: 60px 0;
+}
+.produtos-item {
+  margin-bottom: 40px;
 }
 
 .produtos-item h2 {
   font-size: 2.25em;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .produtos-item h2::before {
@@ -138,6 +160,7 @@ img {
   border-radius: 50%;
   border: 5px solid #e7e4d8;
   box-shadow: 0 0 0 5px currentColor;
+  margin: 20px auto;
 }
 
 h2.produtos-paulista::before {
@@ -165,17 +188,32 @@ h2.produtos-mineiro::before {
   font-size: 1.125em;
   font-weight: bold;
   text-transform: uppercase;
+  width: 180px;
+  display: block;
+  padding: 15px 0;
+  margin: 0 auto;
 }
 
 /* Locais */
 
+.locais {
+  padding: 60px 0;
+}
+
+.locais-item {
+  margin-bottom: 40px;
+}
+
 .locais-item h2 {
   font-size: 2.25em;
+  margin-bottom: 20px;
 }
 
 .locais-item p {
   font-size: 1.125em;
   line-height: 1.4em;
+  max-width: 320px;
+  margin-bottom: 40px;
 }
 
 .locais-item a {
@@ -184,12 +222,14 @@ h2.produtos-mineiro::before {
   text-decoration: none;
   border: 3px solid;
   color: #252525;
+  padding: 10px 20px;
 }
 
 /* Assine */
 
 .assine {
   background: #e7e4d8;
+  padding: 30px 0;
 }
 
 .assine-info h2 {
@@ -211,6 +251,9 @@ h2.produtos-mineiro::before {
   font-size: 1.5em;
   font-style: italic;
   font-family: Georgia, serif;
+  width: calc(100% - 140px);
+  padding: 10px;
+  float: left;
 }
 
 .assine button {
@@ -221,15 +264,29 @@ h2.produtos-mineiro::before {
   font-size: 1.5em;
   color: #fff;
   cursor: pointer;
+  width: 140px;
+  padding: 13px 0;
 }
 
 /*Footer*/
 
 .footer {
   background: #d6d3c8;
+  padding: 40px 0;
+}
+
+.footer img {
+  float: right;
 }
 
 .footer p {
   font-size: 1.125em;
   line-height: 1.4em;
+}
+
+@media (max-width: 739px) { 
+  .footer img {
+    float: none;
+    margin-top: 20px;
+  }
 }
