Responsivo brafé flexbox finalizado.

--- a/css-avancado/brafe-1-flexbox/css/style.css
+++ b/css-avancado/brafe-1-flexbox/css/style.css
@@ -25,12 +25,16 @@ body {
 .menu {
 	background: #252525;
 	padding: 15px 0;
-	
+}
+
+.menu-logo {
+	margin: 0 10px;
 }
 
 .menu-nav {
 	flex: 1;
 	align-self: center;
+	margin: 0 10px;
 }
 
 .menu-nav ul {
@@ -248,6 +252,7 @@ h2.produtos-mineiro::before {
 	flex: 1;
 	margin: 0 10px;
 	display: flex;
+	flex-wrap: wrap;
 	align-content: flex-start;
 }
 
@@ -263,8 +268,7 @@ h2.produtos-mineiro::before {
 	background: none;
 	font-size: 1.5em;
 	font-style: italic;
-	font-family: Georgia, serif;
-	
+	font-family: Georgia, serif;	
 }
 
 .assine button {
@@ -296,5 +300,4 @@ h2.produtos-mineiro::before {
 
 .footer-img {
 	margin: 0 10px;
-	
 }
