--- a/css-avancado/brafe2/puro/css/style.css
+++ b/css-avancado/brafe2/puro/css/style.css
@@ -22,6 +22,11 @@ body {
   box-sizing: border-box;
 }
 
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 /* Header */
 
 .header-info {
@@ -63,4 +68,73 @@ body {
 
 .header-menu li:first-child a::before {
   content: '';
+}
+
+/* Content */
+
+.filter {
+  background: #E7E4D8;
+  border: 3px solid #d6d3c8;
+  width: 300px;
+  margin: 0 10px;
+  padding: 20px;
+  float: left;
+}
+
+.filter h2 {
+  font-size: 1.25em;
+  padding: 10px 0;
+}
+
+.filter ul {
+  border-top: 3px solid #707070;
+  border-bottom: 3px solid #707070;
+  padding: 10px 0;
+}
+
+.filter li {
+  font-size: 18px;
+  font-style: italic;
+  line-height: 2em;
+}
+
+.filter li::after {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: 3px solid #707070;
+  float: right;
+  margin-top: 5px;
+}
+
+.filter-flavors {
+  overflow: hidden;
+}
+
+.filter-flavors span {
+  text-indent: -200px;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background: currentColor;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+
+.flavor-3 {
+  box-shadow: 20px 0 0 0, 40px 0 0 0;
+  color: #492901;
+}
+
+.flavor-4 {
+  box-shadow: 20px 0 0 0, 40px 0 0 0,
+  60px 0 0 0;
+  color: #C17139;
+}
+
+.flavor-5 {
+  box-shadow: 20px 0 0 0, 40px 0 0 0,
+  60px 0 0 0, 80px 0 0 0;
+  color: #D7A54D;
 }
