--- a/css-avancado/brafe2/puro/css/style.css
+++ b/css-avancado/brafe2/puro/css/style.css
@@ -27,6 +27,13 @@ body {
   margin: 0 auto;
 }
 
+.container::after,
+.container::before {
+  content: '';
+  display: table;
+  clear: both;
+}
+
 /* Header */
 
 .header-info {
@@ -137,4 +144,57 @@ body {
   box-shadow: 20px 0 0 0, 40px 0 0 0,
   60px 0 0 0, 80px 0 0 0;
   color: #D7A54D;
+}
+
+/* Products */
+
+.products {
+  margin: 0 10px;
+  width: 620px;
+  float: left;
+}
+
+.products h1 {
+  font-size: 3em;
+  font-weight: normal;
+}
+
+.products li {
+  width: 300px;
+  float: left;
+}
+
+.products li:nth-child(even) {
+  margin-left: 20px;
+}
+
+.products li img {
+  display: block;
+  max-width: 100%;
+  border: 3px solid #fff;
+  box-shadow: 0 0 0 3px #252525;
+  margin: 40px 3px 0 3px;
+}
+
+.products li span {
+  background: #e7e4d8;
+  padding: 10px;
+  font-size: 0.875em;
+  font-weight: bold;
+  position: relative;
+  top: -15px;
+}
+
+.products li h2 {
+  font-size: 0.875em;
+  font-weight: normal ;
+}
+
+.footer {
+  background: #e7e4d8;
+  text-align: center;
+  padding: 60px 0;
+  font-size: 1.125em;
+  line-height: 1.4em;
+  margin-top: 80px;
 }
