--- a/css-avancado/brafe3/puro/css/style.css
+++ b/css-avancado/brafe3/puro/css/style.css
@@ -13,6 +13,7 @@ a {
   text-decoration: none;
 }
 
+
 /* General */
 
 body {
@@ -29,6 +30,7 @@ img {
   max-width: 100%;
   display: block;
 }
+
 
 /* Header */
 
@@ -65,6 +67,15 @@ img {
 
 .header-menu li:first-child a {
   padding-left: 0;
+}
+
+/* Main */
+
+.main-container::after,
+.main-container::before {
+  content: "";
+  display: block;
+  clear: both;
 }
 
 /* SideNav */
@@ -116,4 +127,95 @@ img {
 
 .nav-hospedagens::before {
   background-position: 0 calc(-24px * 5);
+}
+
+/* Products */
+
+.products {
+  float: left;
+  width: calc(100% - 300px);
+  margin: 0 auto;
+  max-width: 960px;
+  padding: 20px;
+}
+
+.products header::after,
+.products header::before {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.products h1 {
+  font-size: 2.25em;
+  float: left;
+}
+
+.btn-add_product {
+  background: #c17139;
+  color: #e7e4d8;
+  font-size: 1.125em;
+  font-family: 'Courier New', Courier, monospace;
+  text-transform: uppercase;
+  padding: 10px 15px;
+  border-radius: 4px;
+  float: right;
+  text-align: center;
+}
+
+.products-item {
+  background: #fff;
+  box-shadow: 0 1px  3px 0 rgba(0,0,0, .35);
+  margin-top: 20px;
+  position: relative;
+}
+
+.products-item::after,
+.products-item::before {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.products-item img {
+  float: left;
+}
+
+.products-item a {
+  width: 24px;
+  height: 24px;
+  overflow: hidden;
+  text-indent: -200px;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  background: url('../img/edit.svg') no-repeat;
+}
+
+.products-item a:hover {
+  background: url('../img/edit-hover.svg') no-repeat;
+}
+
+.products-item ul {
+  float: left;
+  padding: 0 20px;
+  width: calc(100% - 140px);
+  margin-top: 10px;
+}
+
+.products-item li {
+  border-bottom: 1px solid #e7e4d8;
+  padding: 10px 0;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.0625em;
+}
+
+.products-item li:last-child {
+  border: none;
+}
+
+.products-item span {
+  font-weight: bold;
+  width: 70px;
+  display: inline-block;
 }
