--- a/css-avancado/brafe3/puro/css/style.css
+++ b/css-avancado/brafe3/puro/css/style.css
@@ -14,6 +14,7 @@ a {
 }
 
 
+
 /* General */
 
 body {
@@ -63,6 +64,7 @@ img {
   display: block;
   padding: 0 10px;
   font-size: 1.125em;
+  color: #000;
 }
 
 .header-menu li:first-child a {
@@ -70,6 +72,11 @@ img {
 }
 
 /* Main */
+
+.main-container {
+  display: flex;
+  min-height: 94vh;
+}
 
 .main-container::after,
 .main-container::before {
@@ -84,6 +91,7 @@ img {
   width: 300px;
   background: #252525;
   float: left;
+  
 }
 
 .side-nav li a {
@@ -134,8 +142,7 @@ img {
 .products {
   float: left;
   width: calc(100% - 300px);
-  margin: 0 auto;
-  max-width: 960px;
+  max-width: 100%;
   padding: 20px;
 }
 
@@ -151,9 +158,9 @@ img {
   float: left;
 }
 
-.btn-add_product {
+.btn-add {
   background: #c17139;
-  color: #e7e4d8;
+  color: white;
   font-size: 1.125em;
   font-family: 'Courier New', Courier, monospace;
   text-transform: uppercase;
