--- a/css-flexbox/flexblog/css/style.css
+++ b/css-flexbox/flexblog/css/style.css
@@ -1,3 +1,28 @@
+/* Reset */
+
+* {
+  box-sizing: border-box;
+}
+
+body, h1, h2, p, a, ul, li {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Nunito', Helvetica, Arial, sans-serif;
+  color: #222222;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
 }
