--- a/css-flexbox/flexblog/css/style.css
+++ b/css-flexbox/flexblog/css/style.css
@@ -35,11 +35,19 @@ img {
 }
 
 .superinfo {
-  max-width: 1344px;
+  max-width: 1340px;
   display: flex;
   margin: 0 auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+.superinfo p, .superinfo a{
+  margin: 0 10px 10px 10px;
 }
 
 .superinfo a {
   color: white;
+  
 }
