--- a/css-flexbox/flexblog/css/style.css
+++ b/css-flexbox/flexblog/css/style.css
@@ -4,13 +4,19 @@
   box-sizing: border-box;
 }
 
-body, h1, h2, p, a, ul, li {
+body,
+h1,
+h2,
+p,
+a,
+ul,
+li {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'Nunito', Helvetica, Arial, sans-serif;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
   color: #222222;
 }
 
@@ -35,7 +41,7 @@ img {
 }
 
 .superinfo {
-  max-width: 1340px;
+  max-width: 1024px;
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
@@ -43,11 +49,198 @@ img {
   padding-top: 10px;
 }
 
-.superinfo p, .superinfo a{
+.superinfo p,
+.superinfo a {
   margin: 0 10px 10px 10px;
 }
 
 .superinfo a {
   color: white;
-  
+}
+
+/* Menu */
+
+.menu-bg,
+.menu-bg a {
+  background: #2c70ff;
+  color: white;
+}
+
+.menu {
+  max-width: 1024px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 15px 0;
+  align-items: center;
+}
+
+.menu-logo a {
+  font-size: 2.25em;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.menu-nav ul {
+  display: flex;
+  flex: wrap;
+}
+
+.menu-nav ul li {
+  display: inline-block;
+  padding: 15px;
+}
+
+.menu-nav ul li a {
+  font-size: 1.25em;
+}
+
+/* introduction */
+
+.introduction {
+  font-size: 3em;
+  line-height: 1;
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 60px 10px;
+}
+
+/* About */
+.about {
+  border-top: 2px solid #2c70ff;
+  border-bottom: 2px solid #2c70ff;
+  max-width: 1024px;
+  margin: 0 auto;
+  padding: 60px 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about-info {
+  flex: 2 1 300px;
+  margin: 0;
+}
+
+.about-info h1 {
+  font-size: 3em;
+  margin-bottom: 0.5em;
+}
+
+.about-info p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  margin-bottom: 1em;
+  color: #7c7c7c;
+}
+
+.about-img {
+  flex: 1 1 160px;
+  margin: 0 10px;
+}
+
+/* Products */
+
+.products {
+  max-width: 1024px;
+  margin: 60px auto;
+}
+
+.products h1 {
+  font-size: 3em;
+  margin: 0 10px 60px 10px;
+}
+
+.products-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.products-item {
+  flex: 1 1 175px;
+  margin: 10px;
+}
+
+.products-item h2 {
+  font-size: 3em;
+  color: #a4a4a4;
+  background: #f7f7f7;
+  padding: 60px 20px;
+}
+
+.purple {
+  border-top: 8px solid #ae81ff;
+}
+
+.pink {
+  border-top: 8px solid #f9265e;
+}
+
+.blue {
+  border-top: 8px solid #66d6eb;
+}
+
+/* Prices */
+
+.prices {
+  background: #f7f7f7;
+  padding: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.price-item {
+  flex: 1;
+  border: 4px solid white;
+  padding: 20px;
+  margin: 10px;
+}
+
+.price-item h2 {
+  font-size: 3em;
+  color: #a4a4a4;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.price-item span {
+  max-width: 300px;
+  font-size: 3em;
+  margin: 20px auto;
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px 0 5px 0;
+  border-top: 4px solid white;
+  border-bottom: 4px solid white;
+}
+
+.price-item sup {
+  font-size: 1.5rem;
+}
+
+.price-item ul {
+  max-width: 300px;
+  margin: 20px auto;
+  font-size: 1.25em;
+  font-style: italic;
+  color: #7c7c7c;
+}
+
+.price-item li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.price-item li::after {
+  content: "";
+  display: block;
+  width: 6px;
+  height: 6px;
+  background: #2c70ff;
+  border-radius: 50%;
 }
