--- a/css-flexbox/flexblog/css/media.css
+++ b/css-flexbox/flexblog/css/media.css
@@ -34,4 +34,17 @@
   .about-info {
     padding: 0 20px;
   }
+
+  .prices {
+    padding: 0 10px;
+  }
+
+  .price-item:nth-child(2) {
+    order: -2;
+  }
+  .price-item:nth-child(3) {
+    order: -1;
+  }
+
+  
 }
