--- a/css-flexbox/flexblog/css/style.css
+++ b/css-flexbox/flexblog/css/style.css
@@ -192,7 +192,7 @@ img {
 }
 
 .price-item {
-  flex: 1;
+  flex: 1 1 260px;
   border: 4px solid white;
   padding: 20px;
   margin: 10px;
@@ -243,4 +243,140 @@ img {
   height: 6px;
   background: #2c70ff;
   border-radius: 50%;
+}
+
+.price-item a {
+  max-width: 300px;
+  display: block;
+  margin: 20px auto;
+  border: 4px solid;
+  color: #222;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.5em;
+  padding: 15px 0;
+  text-align: center;
+}
+
+/* Quality */
+
+.quality {
+  max-width: 1024px;
+  margin: 60px auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.quality-item {
+  flex: 1 1 321px;
+  margin: 20px 10px;
+}
+
+.quality-item h2{
+  font-size: 2.25em;
+  color: #a4a4a4;
+  margin-bottom: 20px;
+}
+
+.quality-item h2::before {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 30px;
+  margin-right: 10px;
+  background: blue;
+}
+
+.quality-item:nth-of-type(3n+1) h2::before {
+  background: #ae81ff;
+}
+
+.quality-item:nth-of-type(3n+2) h2::before {
+  background: #f9265e;
+}
+
+.quality-item:nth-of-type(3n+3) h2::before {
+  background: #66d9eb;
+}
+
+.quality-item p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  color: #777;
+}
+
+/* Newsletter */
+
+.newsletter {
+  background: #f7f7f7;
+  padding: 60px calc((100% - 1024px)/2);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.newsletter-info {
+  flex: 1 1 320px;
+  margin: 0 10px;
+}
+
+.newsletter-info h1 {
+  font-size: 3em;
+  color: #a4a4a4;
+}
+
+.newsletter-info p {
+  font-size: 1.25em;
+  font-style: italic;
+  max-width: 250px;
+  color: #7c7c7c;
+  margin-bottom: 10px;
+}
+
+.newsletter-form {
+  flex: 2 1 320px;
+  margin: 0 10px;
+  align-self: center;
+  display: flex;
+  flex-wrap: wrap
+}
+
+.newsletter-form input {
+  flex: 3 1 260px;
+  font-size: 1.25em;
+  color: #7c7c7c;
+  font-style: italic;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  border: 4px solid #2c70ff;
+  background: transparent;
+  padding: 10px;
+  margin: 0px;
+  border-radius: 0px;
+}
+
+.newsletter-form button {
+  flex: 1 1 200px;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  font-size: 2.25em;
+  font-weight: bold;
+  text-transform: uppercase;
+  background: #2c70ff;
+  color: white;
+  margin: 0px;
+  cursor: pointer;
+  border: 0px;
+  padding: 15px 10px;
+}
+
+.footer {
+  height: 200px;
+  display: flex;
+  background: #2c70ff;
+  align-items: center;
+}
+
+.footer p {
+  flex: 1;
+  text-align: center;
+  font-size: 2.25em;
+  color: #122ab2;
 }
